...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="24"/>
                                <state key="normal" title="Log in">
                                    <color key="titleColor" red="0.80000000000000004" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="24"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" red="0.80000000000000004" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="24"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" red="0.80000000000000004" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <rect key="frame" x="66" y="260" width="243" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Username"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="17"/>
...
                                <rect key="frame" x="66" y="307" width="243" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="17"/>
...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="ENTRIES" id="d4R-jy-NCi">
                        <barButtonItem key="leftBarButtonItem" title="Log out" style="plain" id="Iej-G3-Ura">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Gcm-bN-gom">
                                <rect key="frame" x="16" y="2" width="83" height="40"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Logout"/>
                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
                                <state key="normal" title="Log Out ">
...
                                        <rect key="frame" x="10" y="54" width="354" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="entryTitle"/>
                                        <color key="textColor" red="0.59215686270000001" green="0.63137254899999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="18"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="saveEntry"/>
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
                                <state key="normal" title="SAVE">
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="entryContentEditable"/>
                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
                                <state key="normal" title="DELETE">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
