...
    @IBOutlet weak var passwordText: UITextField!
    
    @IBAction func logInButton(_ sender: Any) {

        if self.emailText.text == "" || self.passwordText.text == "" {
            
            let alertController = UIAlertController(title: "Error", message: "Please enter an email and password.", preferredStyle: .alert)
            
            let defaultAction = UIAlertAction(title: "OK", style: .cancel, handler: nil)
            alertController.addAction(defaultAction)
            
            self.present(alertController, animated: true, completion: nil)
            
...
